src/test/ui/borrowck/issue-92015.stderr
error[E0594]: cannot assign to `*foo`, which is behind a `&` reference
  --> $DIR/issue-92015.rs:6:5
   |
LL |     let foo = Some(&0).unwrap();
   |         --- help: consider changing this to be a mutable reference: `&mut i32`
LL |     *foo = 1;
   |     ^^^^^^^^ `foo` is a `&` reference, so the data it refers to cannot be written

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
